[tool.poetry]
name = "new_sdv_2"
version = "0.1.0"
description = "SDV extension: High-cardinality adapter (Top-K + Hash Buckets) for single-table synthesizers."
authors = ["You <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "new_sdv_2" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
sdv = ">=1.4,<2.0"
pandas = ">=1.5,<3.0"
numpy = ">=1.23,<3.0"
numpy>=1.26
pandas>=2.2
scipy>=1.11
plotly>=5.23,<6  # only if your examples need it
torch>=2.4     # uncomment only if you actually import torch
pytest>=7
[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
