[tool.poetry]
name = "new_sdv_2"
version = "0.1.0"
description = "SDV extension: High-cardinality adapter (Top-K + Hash Buckets) for single-table synthesizers."
authors = ["You <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "new_sdv_2" }]

[tool.poetry.dependencies]
streamlit>=1.33
plotly>=5.23,<6
pandas>=2.2
numpy>=1.26
scipy>=1.11
torch>=2.4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
